# testtherest

./: .gitignore
aidevs3/w1/s01e02/: api_key.yaml.template  post.py  requirements.txt
aidevs3/w1/s01e03/: fix.py  input_data.txt  requirements.txt
aidevs3/w1/s01e04/: hard_prompt.txt.fail
aidevs3/w1/s01e05/: api_key.yaml.template
aidevs3/w2/s02e01/: .gitignore  api_key.yaml.template  findTheStreet.py  requirements.txt  transcript.py
aidevs3/w2/s02e02/: api_key.yaml.template  config.py  findTheCity.py
aidevs3/w2/s02e03/: .gitignore  api_key.yaml.template  config.py  getImage.py  requirements.txt
aidevs3/w2/s02e04/: answer.json  answer.json.mat  answer.json.my  classification.txt  classify.py  ocr.py  raport.py  raports.txt  reply.py  requirements.txt  transcript.py  translate.py
aidevs3/w4/s04e01/: .gitignore  api_key.yaml.template  config.py  get-images.py  requirements.txt
aidevs3/w4/s04e02/: .gitignore  api_key.yaml.template  config.py  get-data.py  requirements.txt  verify.py
aidevs3/w4/s04e03/: .gitignore  api_key.yaml.template  config.py  requirements.txt  web-query.py
aidevs3/w4/s04e04/: README.md  api_key.yaml.template  config.py  pilot.py  report.py  (+2 more)
cpp/svr/http-lib/: CMakeLists.txt  Makefile  README.md
cpp/svr/http-lib/src/: main.cpp
python/S01E01/: config.py  get_post.py
python/S01E02/: activate
python/S01E03/: api_key.yaml.template  config.py
python/S01E04/: instruction.txt  light_prompt.txt  map.txt
python/S01E05/: censorship.py  config.py
python/client/: api_key.yaml.template  get_post.py
python/server/: README.md  svr.py
(+9 files in other folders)
